tests/sksl/errors/Ossfuzz38140.glsl
### Compilation failed:

error: 5: shader 'main' must be main() or main(float2)
1 error
